# adbc-driver-quack

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  go.mod  go.sum  pyproject.toml  setup.py
.github/workflows/: go.yml  packaging.yml  python.yml
driver/quack/: arrow_conv.go  bulk_ingest.go  bulk_ingest_test.go  driver.go  get_objects_types.go  get_objects_types_test.go  metadata.go  metadata_constraints.go  metadata_constraints_test.go  metadata_info.go  metadata_objects.go  record_reader.go  session.go  transaction_test.go  validation_test.go
internal/codec/: binary_reader.go  binary_round_trip_test.go  binary_writer.go  constants.go  errors.go  hugeint.go
internal/message/: message_codec.go  messages.go  round_trip_test.go  validity.go  vector_codec.go  vector_encoder.go  vectors.go
internal/quacktype/: codec.go  codec_test.go  logical_type.go  logical_type_id.go
internal/transport/: http.go  http_test.go  uri.go  uri_test.go
pkg/quack/: Makefile  driver.go  init.go  utils.c  utils.h
python/: MANIFEST.in  README.md  pyproject.toml  setup.py
python/adbc_driver_quack/: __init__.py  __main__.py  _manifest.py  dbapi.py
python/tests/: conftest.py  test_manifest.py  test_profiles.py  test_smoke.py
