[project]
name = "adbc-driver-quack"
description = "An Apache Arrow ADBC driver for DuckDB's Quack remote protocol."
authors = [{ name = "GizmoData", email = "support@gizmodata.com" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
keywords = [
    "adbc",
    "adbc-driver",
    "apache-arrow",
    "arrow",
    "columnar",
    "database",
    "duckdb",
    "gizmodata",
    "olap",
    "pyarrow",
    "quack",
    "sql",
]
dependencies = [
    # >=1.11.0 for driver-manifest + connection-profile resolution
    # (profile=..., uri="profile://...", quack:// scheme lookup).
    "adbc-driver-manager >=1.11.0",
    "importlib-resources >=1.3",
    # pyarrow is required for any DBAPI cursor method that returns
    # Arrow data (fetch_arrow_table, fetch_record_batch, etc.) — i.e.
    # every quickstart example in the README. Real dep, not optional.
    "pyarrow >=14.0.1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
]

[project.optional-dependencies]
dbapi = ["pandas"]
test = ["pandas", "pytest >=7", "duckdb >=1.5.3"]

[project.urls]
homepage = "https://github.com/gizmodata/adbc-driver-quack"
repository = "https://github.com/gizmodata/adbc-driver-quack"
issues = "https://github.com/gizmodata/adbc-driver-quack/issues"

[build-system]
requires = ["setuptools >= 77.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
# Python sources live under python/ so the repo can be polyglot (Go at
# the root, Python here, cgo wrapper in pkg/quack/). Be explicit about
# what we package — auto-find would also sweep up python/tests/.
packages = ["adbc_driver_quack"]
package-dir = { "" = "python" }

[tool.pytest.ini_options]
xfail_strict = true
testpaths = ["python/tests"]
markers = [
    "integration: requires a live duckdb+quack server (started by conftest.py)",
]
